[gd_scene load_steps=33 format=3 uid="uid://dtsminrhe8yj1"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="1_fss8k"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="2_y7w5l"]
[ext_resource type="AudioStream" uid="uid://gtd741w2wmo1" path="res://Music/28 - Threat - Sky Islands.mp3" id="3_lscam"]
[ext_resource type="Texture2D" uid="uid://cnkg5na4bsn4h" path="res://Sprites/Clam.png" id="4_trkks"]
[ext_resource type="AudioStream" uid="uid://bhuao8op8csq5" path="res://Music/04 - Threat - Outskirts.mp3" id="4_xrkwe"]
[ext_resource type="Texture2D" uid="uid://b7jtl38wmyy0j" path="res://Sprites/ClamHood.png" id="6_c2t1p"]
[ext_resource type="Script" path="res://Scripts/Players/Player.gd" id="9_3h2td"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="9_jsm5r"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/nuke_scene.tscn" id="10_nm07e"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/Sweeper.tscn" id="11_sidb3"]
[ext_resource type="Script" path="res://Scripts/Blackout/Blackout Timer.gd" id="12_m2evv"]
[ext_resource type="PackedScene" uid="uid://dswsedgoqefr7" path="res://Scenes/blackout.tscn" id="13_rd4nt"]
[ext_resource type="PackedScene" uid="uid://dcv5hh4o4rswm" path="res://Scenes/Fog.tscn" id="14_6x8ac"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P1slidelabel.gd" id="14_ewhg0"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P2slidelabel.gd" id="15_icl6x"]
[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="15_lwwaa"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P3slidelabel.gd" id="16_o8b1v"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P4slidelabel.gd" id="17_bn441"]
[ext_resource type="Script" path="res://Scripts/Gameplay/MapGrounds/AddGround4.gd" id="18_68srx"]
[ext_resource type="PackedScene" uid="uid://d342vv4g7762h" path="res://Scenes/GroundLeft.tscn" id="19_an7lg"]
[ext_resource type="PackedScene" uid="uid://crvy5gfiqpum2" path="res://Scenes/Ground.tscn" id="20_pe1sc"]
[ext_resource type="PackedScene" uid="uid://dsh7a5xw0h0uo" path="res://Scenes/GroundRight.tscn" id="21_6l6ay"]
[ext_resource type="Script" path="res://Scripts/UI/InGameTimer.gd" id="25_slcg1"]
[ext_resource type="StyleBox" uid="uid://dp73x7trpbyyu" path="res://StyleBoxes/EmptyOutline_StyleBox.tres" id="26_dxjrx"]
[ext_resource type="Script" path="res://Scripts/UI/StartandEndCountdown.gd" id="27_wgndl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk722"]
size = Vector2(12446, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f41vw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oe2t"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1f5g"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xctt1"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsc88"]
size = Vector2(60, 60)

[sub_resource type="TileSet" id="TileSet_cbfel"]

[node name="Arena_01" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -324)

[node name="void" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fss8k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-6, 234)
shape = SubResource("RectangleShape2D_nk722")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("2_y7w5l")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="SkyIslands" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("3_lscam")

[node name="Outskirts" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("4_xrkwe")

[node name="Players" type="Node" parent="."]

[node name="Player 1" type="CharacterBody2D" parent="Players"]
position = Vector2(-50, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("9_3h2td")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 1"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 1"]
visible = false
position = Vector2(-1.25, -0.625001)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("4_trkks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1"]
position = Vector2(0, -1.52588e-05)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_f41vw")
one_way_collision = true

[node name="Player 2" type="CharacterBody2D" parent="Players"]
position = Vector2(48, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("9_3h2td")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 2"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(1, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 2"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("6_c2t1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 2"]
visible = false
shape = SubResource("RectangleShape2D_5oe2t")
one_way_collision = true

[node name="Player 3" type="CharacterBody2D" parent="Players"]
position = Vector2(-152, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("9_3h2td")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 3"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.627451, 0, 0.717647, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 3"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("4_trkks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 3"]
visible = false
shape = SubResource("RectangleShape2D_i1f5g")
one_way_collision = true

[node name="Player 4" type="CharacterBody2D" parent="Players"]
position = Vector2(145, -171)
scale = Vector2(0.8, 0.8)
script = ExtResource("9_3h2td")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 4"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.741176, 0, 0.309804, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 4"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("6_c2t1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 4"]
visible = false
shape = SubResource("RectangleShape2D_xctt1")
one_way_collision = true

[node name="Player 5" type="CharacterBody2D" parent="Players"]
position = Vector2(145, -171)
scale = Vector2(0.8, 0.8)
script = ExtResource("9_3h2td")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 5"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0, 0.8, 0.180392, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 5"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("6_c2t1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 5"]
visible = false
shape = SubResource("RectangleShape2D_dsc88")
one_way_collision = true

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("9_jsm5r")
nuke_scene = ExtResource("10_nm07e")
sweeper_scene = ExtResource("11_sidb3")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 15.0
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 30.0
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 45.0
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="Modifier Stuff" type="Node" parent="."]

[node name="Blackout Timer" type="Node2D" parent="Modifier Stuff"]
script = ExtResource("12_m2evv")
blackout = ExtResource("13_rd4nt")
fog = ExtResource("14_6x8ac")

[node name="Timer" type="Timer" parent="Modifier Stuff/Blackout Timer"]
wait_time = 10.0
autostart = true

[node name="GUI\'s" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1" type="Label" parent="GUI\'s"]
layout_mode = 0
offset_left = -551.0
offset_top = -625.0
offset_right = -329.0
offset_bottom = -584.0
theme = ExtResource("15_lwwaa")
text = "Player 1: 10%"
vertical_alignment = 1
script = ExtResource("14_ewhg0")

[node name="P2" type="Label" parent="GUI\'s"]
layout_mode = 0
offset_left = 314.0
offset_top = -625.0
offset_right = 541.0
offset_bottom = -584.0
theme = ExtResource("15_lwwaa")
text = "Player 2: 10%"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("15_icl6x")

[node name="P3" type="Label" parent="GUI\'s"]
layout_mode = 0
offset_left = -551.0
offset_top = -51.0
offset_right = -329.0
offset_bottom = -10.0
theme = ExtResource("15_lwwaa")
text = "Player 1: 10%"
vertical_alignment = 1
script = ExtResource("16_o8b1v")

[node name="P4" type="Label" parent="GUI\'s"]
layout_mode = 0
offset_left = 314.0
offset_top = -51.0
offset_right = 541.0
offset_bottom = -10.0
theme = ExtResource("15_lwwaa")
text = "Player 2: 10%"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("17_bn441")

[node name="Grounds" type="Node" parent="."]
script = ExtResource("18_68srx")
GroundLeft = ExtResource("19_an7lg")
Ground = ExtResource("20_pe1sc")
GroundRight = ExtResource("21_6l6ay")

[node name="Timer" type="Timer" parent="Grounds"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Grounds"]
wait_time = 3.0
autostart = true

[node name="Timer3" type="Timer" parent="Grounds"]
wait_time = 4.0
autostart = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cbfel")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(-1114115, 2, 0, -1179647, 65538, 0, -917503, 65538, 0, -655359, 65538, 0, -393215, 65538, 0, -327683, 2, 0, -589827, 2, 0, -1376259, 2, 0, -851971, 65538, 0, -1441791, 65538, 0)

[node name="SpawnPos\'" type="Node" parent="."]

[node name="SpawnPos1" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-471, -348)

[node name="SpawnPos2" type="Node2D" parent="SpawnPos\'"]
position = Vector2(467, -349)

[node name="SpawnPos3" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-415, -349)

[node name="SpawnPos4" type="Node2D" parent="SpawnPos\'"]
position = Vector2(416, -343)

[node name="Timer" type="Label" parent="."]
offset_left = -51.0
offset_top = -622.0
offset_right = 52.0
offset_bottom = -581.0
theme = ExtResource("15_lwwaa")
text = "0:0:0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("25_slcg1")

[node name="Timer" type="Timer" parent="Timer"]
wait_time = 0.01
autostart = true

[node name="Trans" type="Label" parent="."]
offset_left = -51.0
offset_top = -622.0
offset_right = 52.0
offset_bottom = -581.0
theme = ExtResource("15_lwwaa")
theme_override_styles/normal = ExtResource("26_dxjrx")
text = "0:0:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="Label" parent="."]
z_index = 5
offset_left = -576.0
offset_top = -648.0
offset_right = 576.0
theme = ExtResource("15_lwwaa")
theme_override_font_sizes/font_size = 256
theme_override_styles/normal = ExtResource("26_dxjrx")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("27_wgndl")

[node name="Timer" type="Timer" parent="Countdown"]

[connection signal="area_entered" from="void" to="void" method="_on_area_entered"]
[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="timeout" from="Modifier Stuff/Blackout Timer/Timer" to="Modifier Stuff/Blackout Timer" method="_on_timer_timeout"]
[connection signal="timeout" from="Grounds/Timer" to="Grounds" method="_on_timer_timeout"]
[connection signal="timeout" from="Grounds/Timer2" to="Grounds" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Grounds/Timer3" to="Grounds" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer/Timer" to="Timer" method="_on_timer_timeout"]
[connection signal="timeout" from="Countdown/Timer" to="Countdown" method="_on_timer_timeout"]
